<resources>
    <string name="app_name">FunWorld</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="or">or</string>
    <string name="logIn">Log in</string>
    <string name="register">Register</string>
    <string name="forgottenPass">Forgot your password?</string>
    <string name="wrongPasswordOrUsername">Wrong password or username.</string>

   <!-- Strings related to registration-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="name">Name:</string>
    <string name="hint_name">e.g. Dave</string>
    <string name="hint_Username">e.g. Dave1232</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="repeatPassword">Repeat password:</string>
    <string name="email">Email:</string>
    <string name="hint_email">e.g.  dave@gmail.com</string>
    <string name="error_passwordsDontMatch">Passwords do not match!</string>
    <string name="chooseQuestion">Choose one question for password recover:</string>
    <string name="example_answer">e.g. My mother\'s birthplace is Osijek.</string>
    <string-array name="questions">
        <item>- - - - - - - - - - - - - - - - - - - - - - - - - - - - -</item>
        <item>What is your mother\'s birthplace?</item>
        <item>What is the name of your first pet?</item>
        <item>What is the name of your primary school teacher?</item>
    </string-array>
    <string name="elementsArentEntered">You didn\'t enter all data.</string>
    <string name="successfullRegistration">Successfully registered. :)</string>
    <string name="wrongQuestion">You have choosen wrong question.</string>
    <string name="wrongAnswer">Wrong answer.</string>
    <string name="emailIsNotValid">Email isn\'t valid.</string>
    <string name="playerAlreadyExists">This username is already taken.</string>

    <!--String related to mainActivity-->
    <string name="countries">About country</string>
    <string name="games">Games</string>
    <string name="picado">Picado</string>
    <string name="rightFlag">Right Flag</string>
    <string name="memory">Memory</string>
    <string name="welcome">Welcome,</string>/>

    <!--Strings related to forgottenpass-->
    <string name="tvForgottenPass">If you have forgotten your password then choose question and answer it correctly.</string>
    <string name="bForgottenPassword">Show me my password</string>/>

    <!--Strings related to data of country-->
    <string name="nazivRegije">Region: </string>
    <string name="area_label">Area (m2): </string>
    <string name="capital_label">Capital: </string>
    <string name="population_label">Population: </string>
    <string name="language_label">Official language: </string>
    <string name="currency_label">Currency: </string>
    <string name="alphacode_label">Aplha code 3: </string>
    <string-array name="countries1">
        <item>Albania</item>
        <item>Andorra</item>
        <item>Armenia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Kazakhstan</item>
        <item>Kosovo</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malta</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>Vatican</item>
    </string-array>

    <!--Strings related to games-->
    <string name="yes">START GAME</string>
    <string name="cancel">CANCEL</string>
    <string name="startgame">Do you want to play?</string>
    <string name="prompt_answer">Answer</string>
    <string name="arraw">\u21e8</string>
    <string name="memoryarraw">Memory \u21e8</string>
    <string name="rightflagarraw">Right Flag \u21e8</string>
    <string name="picadoarraw">Picado \u21e8</string>
    <string name="picadoInstructions">Tap the place on map where the given capital is located.</string>
    <string name="gameInstructions">Instructions</string>
    <string name="memoryInstructions">Pair all flags in shortest time possible.</string>
    <string name="tiltInstructins">Put the device in horizontal position and then tilt device left or right to choose  flag.</string>
    <string name="wrongUsername">User does not exists.</string>

</resources>
