<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gabrielaangebrandt.funworld.LauncherActivity.view.Login">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:hint="@string/prompt_username"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_margin="16dp"
            android:layout_below="@+id/iv_logo"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout"
        android:hint="@string/prompt_password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginTop="40dp"
            android:layout_margin="16dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text_input_layout1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/logIn"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_login1"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_or"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/register"
        android:padding="16dp"/>


    <TextView
        android:id="@+id/tv_forgotten_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgottenPass"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_register"
        android:clickable="true"
        android:background="@drawable/text_color"/>

</RelativeLayout>
