<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielaangebrandt.funworld.register_activity.view.RegisterActivity">

    <!--SCROLLVIEW-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--IME-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toEndOf="@+id/tv_name"
                    android:inputType="textPersonName"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_name"
                android:text="@string/hint_name"
                android:layout_marginLeft="16dp"
                android:textSize="10sp"
                android:layout_marginRight="16dp"/>

            <!--  KORISNIČKO IME-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_name"
                android:layout_marginTop="16dp"
                android:hint="@string/username">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_name"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/tv_username"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_username"
                android:text="@string/hint_Username"
                android:textSize="10sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <!--LOZINKA-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_username"
                android:layout_marginTop="16dp"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/et_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_username"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/tv_password1"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- PONOVI LOZINKU-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_password"
                android:layout_marginTop="16dp"
                android:hint="@string/repeatPassword">

                <EditText
                    android:id="@+id/et_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/tv_password2"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <!--EMAIL-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_password1"
                android:layout_marginTop="16dp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/tv_email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_email"
                android:text="@string/hint_email"
                android:textSize="10sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>


            <!--  SIGURNOSNO PITANJE-->

            <TextView
                android:id="@+id/tv_choose_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_email"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/chooseQuestion"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_choose_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_choose_question"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/spinner_choose_question"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_answer_hint"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/et_answer"
                android:text="@string/example_answer"
                android:textSize="10sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <!--GUMB ZA REGISTRACIJU-->

            <Button
                android:id="@+id/btn_register_player"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/tv_answer_hint"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
